--- a/index.html
+++ b/index.html
@@ -10,95 +10,103 @@
 <body>
 <div class="box">
 <div class="section">
-<div class="top1">
-    <ul>
-        <li>XIAOMI</li>
-        <li>YIDONG</li>
-        <li>
-            <img src="img/agriculture.png" alt="" class="one">
-            <!--<img src="img/agriculture1.png" alt="" class="two">-->
-        </li>
-        <li>SUNING</li>
-        <li>QIYE</li>
-    </ul>
-</div>
-    <div class="banner">
-        <!--<img src="img/16122704-d204e2e72d4ac39b372e03aab82de2b8-1.jpg" alt="">-->
-    </div>
-<div class="fenlei">
-    <ul>
-        <li>
-            <div class="tu">
-                <img src="img/79bOOOPIC4e.jpg" alt="">
-            </div>
-            <div class="zi">
-                <p>初步学习html选用了小米练手，小米中的布局效果比较简单，适合新手练习.
-                    可以更快的熟悉html。
-                </p>
-            </div>
-        </li>
-        <li>
-            <div class="tu">
-                <img src="img/79bOOOPIC4e.jpg" alt="">
-            </div>
-            <div class="zi">
-                <p>初步学习html选用了小米练手，小米中的布局效果比较简单，适合新手练习.
-                    可以更快的熟悉html。
-                </p>
-            </div>
-        </li>
-        <li>
-            <div class="tu">
-                <img src="img/79bOOOPIC4e.jpg" alt="">
-            </div>
-            <div class="zi">
-                <p>初步学习html选用了小米练手，小米中的布局效果比较简单，适合新手练习.
-                    可以更快的熟悉html。
-                </p>
-            </div>
-        </li>
-        <li>
-            <div class="tu">
-                <img src="img/79bOOOPIC4e.jpg" alt="">
-            </div>
-            <div class="zi">
-                <p>初步学习html选用了小米练手，小米中的布局效果比较简单，适合新手练习.
-                    可以更快的熟悉html。
-                </p>
-            </div>
-        </li>
-    </ul>
-</div>
-</div>
-<!--<div class="db">-->
-    <!--<div class="row db1">-->
-        <!--<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">-->
-            <!--<div class="a">-->
-                <!--Copyright © 2017.Company name All rights reserved.-->
-            <!--</div>-->
-        <!--</div>-->
-        <!--<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">-->
-            <!--<div class="a1">-->
-                <!--<ul>-->
-                    <!--<li>-->
-
-                    <!--</li>-->
-                    <!--<li></li>-->
-                    <!--<li></li>-->
-                    <!--<li></li>-->
-                    <!--<li></li>-->
-                <!--</ul>-->
-            <!--</div>-->
-        <!--</div>-->
+    <div id="menu">
+        <ul>
+            <li data-menuanchor="p1" class="active">
+                <a href="#p1">主页</a>
+            </li>
+            <li data-menuanchor="p2">
+                <a href="#p2">我会的</a>
+            </li>
+            <li data-menuanchor="p3">
+                <a href="#p3">我做的</a>
+            </li>
+            <li data-menuanchor="p4">
+                <a href="#p4">我学的</a>
+            </li>
+            <li data-menuanchor="p5">
+                <a href="#p5">关于我</a>
+            </li>
+        </ul>
+    </div>    <div class="banner">
+<div class="zhe">
+    <!--<div class="nei">-->
+        <!--<h1>关于全栈</h1>-->
+        <!--<h2>-->
+            <!--全栈工程师，也叫全端工程师，英文FullStackdeveloper。是指掌握多种技能，并能利用多种技能独立完成产品的人。-->
+        <!--</h2>-->
     <!--</div>-->
-    <!--<a href="" class="jian">-->
-        <!--<div class="iconfont">-->
-            <!--&#xe66a;-->
-        <!--</div>-->
-    <!--</a>-->
-<!--</div>-->
+    <div class="scene">
+        <ul>
+            <li>
+                <h1>关于全栈</h1>
+                <h2>
+                全栈工程师，也叫全端工程师，英文FullStackdeveloper。是指掌握多种技能，并能利用多种技能独立完成产品的人。
+                </h2>
+            </li>
+            <li> <h1>关于全栈</h1>
+                <h2>
+                    全栈工程师，也叫全端工程师，英文FullStackdeveloper。是指掌握多种技能，并能利用多种技能独立完成产品的人。
+                </h2></li>
+            <li> <h1>关于全栈</h1>
+                <h2>
+                    全栈工程师，也叫全端工程师，英文FullStackdeveloper。是指掌握多种技能，并能利用多种技能独立完成产品的人。
+                </h2></li>
+            <li> <h1>关于全栈</h1>
+                <h2>
+                    全栈工程师，也叫全端工程师，英文FullStackdeveloper。是指掌握多种技能，并能利用多种技能独立完成产品的人。
+                </h2></li>
+            <li> <h1>关于全栈</h1>
+                <h2>
+                    全栈工程师，也叫全端工程师，英文FullStackdeveloper。是指掌握多种技能，并能利用多种技能独立完成产品的人。
+                </h2></li>
+            <li> <h1>关于全栈</h1>
+                <h2>
+                    全栈工程师，也叫全端工程师，英文FullStackdeveloper。是指掌握多种技能，并能利用多种技能独立完成产品的人。
+                </h2></li>
+        </ul>
+        <div class="next">&gt;</div>
+        <div class="prev">&lt;</div>
+    </div>
+</div>
+</div>
+</div>
     <div class="section">
-2
+        <div class="row">
+                <div class="neikuang">
+                    <img src="img/css.png" alt="">
+                    <h2>CSS</h2>
+                    <p>CS是一种用来表现HTML文件样式的计算机语言。能对网页中元素位置的排版进行精确控制
+                    </p>
+                </div>
+                <div class="neikuang">
+                    <img src="img/css.png" alt="">
+                    <h2>超文本链接语言</h2>
+                    <p>超级文本标记语言是 标准通用标记语言下的一个应用，也是一种规范，一种 标准，
+                    </p>
+                </div>
+                <div class="neikuang">
+                    <img src="img/css.png" alt="">
+                    <h2>响应式布局</h2>
+                    <p>响应式布局，就是一个页面能够匹配多个终端，而不是为每个终端做一个特定的版本</p>
+                </div>
+                <div class="neikuang">
+                    <img src="img/css.png" alt="">
+                    <h2>预定义系统</h2>
+                    <p>用预定义的类来实现响应，更快速的实现响应式布局，栅格系统的使用，可以让网页的信息呈现更加美观易读，更具可用性。</p>
+                </div>
+                <div class="neikuang">
+                    <img src="img/css.png" alt="">
+                    <h2>修改试图</h2>
+                    <p>修改视口：把物理像素改成逻辑像素；引入js文件；修改设计稿的宽度，一般以百分比布局为主，以rem布局为辅</p>
+                </div>
+                <div class="neikuang">
+                    <img src="img/css.png" alt="">
+                    <h2>层叠样式表</h2>
+                    <p>CSS（层叠样式表）是一种用来表现HTML或XML等文件样式的计算机语言。能够对网页中元素位置的排版进行像素级精确控制
+                    </p>
+            </div>
+        </div>
     </div>
     <div class="section">
 3
@@ -113,7 +121,15 @@
 </body>
 <script src="js/jquery-3.2.1.js"></script>
 <script src="js/jquery.easing.1.3.js"></script>
+<script src="js/index.translt.js"></script>
 <script src="js/jquery.fullPage.min.js"></script>
 <script src="js/index.js"></script>
-
+<script>
+    $(".next").click(function () {
+        $(".scene ul").transition({rotateY:"-=60"})
+    })
+    $(".prev").click(function () {
+        $(".scene ul").transition({rotateY:"+=60"})
+    })
+</script>
 </html>
