--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/jquery.fullPage.css">
+    <link rel="stylesheet" href="css/base.css">
 </head>
 <body>
 <div class="box">
@@ -16,10 +17,10 @@
                 <a href="#p1">主页</a>
             </li>
             <li data-menuanchor="p2">
-                <a href="#p2">我会的</a>
+                <a href="#p2">关于我</a>
             </li>
             <li data-menuanchor="p3">
-                <a href="#p3">我做的</a>
+                <a href="#p3">我会的</a>
             </li>
             <li data-menuanchor="p4">
                 <a href="#p4">我学的</a>
@@ -72,55 +73,215 @@
 </div>
 </div>
     <div class="section">
-        <div class="row">
-                <div class="neikuang">
-                    <img src="img/css.png" alt="">
-                    <h2>CSS</h2>
-                    <p>CS是一种用来表现HTML文件样式的计算机语言。能对网页中元素位置的排版进行精确控制
-                    </p>
+        <div id="index">                                           <!-- Index starts here -->
+            <div class="container main">
+                <div class="row home">
+                    <div id = "index_left" class="col-md-6 left">
+                        <img class="img-responsive img-rabbit" src="img/home.jpg">
+                    </div>
+                    <div id = "index_right" class="col-md-6 text-center right">
+                        <div class="logo">
+                            <img src="img/logo.png">
+                            <h4>我是武世琪</h4>
+                        </div>
+                        <p class="home-description">
+                            大家好，我叫武世琪，我来自山西长治，我没有兴趣，没有爱好
+                        </p>
+                        <div class="btn-group-vertical custom_btn animated slideinright">
+                            <div id="about" class="btn btn-rabbit">关于我</div>
+                        </div>
+                    </div>
                 </div>
-                <div class="neikuang">
-                    <img src="img/css.png" alt="">
-                    <h2>超文本链接语言</h2>
-                    <p>超级文本标记语言是 标准通用标记语言下的一个应用，也是一种规范，一种 标准，
-                    </p>
+
+
+            </div>
+        </div>                                                      <!-- index ends here -->
+
+        <div id="about_scroll" class="pages ">                      <!-- about strats here  -->
+            <div class="container main">
+                <div class="row">
+                    <div class="col-md-6 left" id="about_left">
+                        <img class="img-responsive img-rabbit" src="img/about.jpg">
+                    </div>
+
+                    <div class="col-md-6 right" id="about_right">
+                        <a href="#index" class="btn btn-rabbit back"> <i class="fa fa-angle-left" aria-hidden="true"></i> 回到首页 </a>
+                        <div id="watermark">
+                            <h2 class="page-title" text-center>关于武世琪</h2>
+                            <div class="marker">a</div>
+                        </div>
+                        <p class='subtitle'>     大家好，我叫武世琪，我来自山西长治，我没有兴趣，没有爱好
+
+                        </p>
+                        <p class="info">"的gas获国家科技让师傅嘎哈抗裂砂浆分类SW如POUR无irHSDHFSAKJH
+                            KJHADJKFHAKJDHUIHJHDFJSHDJFHJAF阿违法和卡尔集合集合计划经济和霍建华很快会尽快回家看黄金黄
+                            金客户尽快回家回家客户即可很快就会看见回来开会开会空间哈空间划分空间啊好的风景哈就
+                            好伐啦二个话题 还核发客户反馈就爱好房间卡号房间卡咖啡机哈空间发挥空间阿卡丽发挥好地方规划
+                            局快乐寒假快乐是大幅度回家看了人防御温热三个人妇代会就能看我发的国芳百货科技枪WUAEGKNUIHJNFD "</p>
+
+                    </div>
                 </div>
-                <div class="neikuang">
-                    <img src="img/css.png" alt="">
-                    <h2>响应式布局</h2>
-                    <p>响应式布局，就是一个页面能够匹配多个终端，而不是为每个终端做一个特定的版本</p>
-                </div>
-                <div class="neikuang">
-                    <img src="img/css.png" alt="">
-                    <h2>预定义系统</h2>
-                    <p>用预定义的类来实现响应，更快速的实现响应式布局，栅格系统的使用，可以让网页的信息呈现更加美观易读，更具可用性。</p>
-                </div>
-                <div class="neikuang">
-                    <img src="img/css.png" alt="">
-                    <h2>修改试图</h2>
-                    <p>修改视口：把物理像素改成逻辑像素；引入js文件；修改设计稿的宽度，一般以百分比布局为主，以rem布局为辅</p>
-                </div>
-                <div class="neikuang">
-                    <img src="img/css.png" alt="">
-                    <h2>层叠样式表</h2>
-                    <p>CSS（层叠样式表）是一种用来表现HTML或XML等文件样式的计算机语言。能够对网页中元素位置的排版进行像素级精确控制
-                    </p>
             </div>
         </div>
     </div>
     <div class="section">
-3
+        <div class="row">
+            <div class="neikuang">
+                <img src="img/css.png" alt="">
+                <h2>CSS</h2>
+                <p>CS是一种用来表现HTML文件样式的计算机语言。能对网页中元素位置的排版进行精确控制
+                </p>
+            </div>
+            <div class="neikuang">
+                <img src="img/css.png" alt="">
+                <h2>超文本链接语言</h2>
+                <p>超级文本标记语言是 标准通用标记语言下的一个应用，也是一种规范，一种 标准，
+                </p>
+            </div>
+            <div class="neikuang">
+                <img src="img/css.png" alt="">
+                <h2>响应式布局</h2>
+                <p>响应式布局，就是一个页面能够匹配多个终端，而不是为每个终端做一个特定的版本</p>
+            </div>
+            <div class="neikuang">
+                <img src="img/css.png" alt="">
+                <h2>预定义系统</h2>
+                <p>用预定义的类来实现响应，更快速的实现响应式布局，栅格系统的使用，可以让网页的信息呈现更加美观易读，更具可用性。</p>
+            </div>
+            <div class="neikuang">
+                <img src="img/css.png" alt="">
+                <h2>修改试图</h2>
+                <p>修改视口：把物理像素改成逻辑像素；引入js文件；修改设计稿的宽度，一般以百分比布局为主，以rem布局为辅</p>
+            </div>
+            <div class="neikuang">
+                <img src="img/css.png" alt="">
+                <h2>层叠样式表</h2>
+                <p>CSS（层叠样式表）是一种用来表现HTML或XML等文件样式的计算机语言。能够对网页中元素位置的排版进行像素级精确控制
+                </p>
+            </div>
+        </div>
     </div>
+    <div class="section si">
+        <div class="ZP">
+                <div class="zuopin">
+                    <div class="zpa">
+                        <img src="img/xm.jpg" alt="">
+                        <div class="yc"></div>
+                        <div class="tpz">
+                            <a href="../小米/index.html">
+                            </a>
+                            <h4>小米官网</h4>
+                            <h6>第一个使用html做出的页面</h6>
+                        </div>
+                    </div>
+                    <div class="zpa">
+                        <img src="img/suning.jpg" alt="">
+                        <div class="yc"></div>
+                        <div class="tpz">
+                            <a href="../苏宁易购/index.html">
+                            </a>
+                            <h4>苏宁易购</h4>
+                            <h6>涉及到的东西较多，可以熟悉HTML.</h6>
+                        </div>
+                    </div>
+                    <div class="zpa">
+                        <img src="img/pingguo.jpg" alt="">
+                        <div class="yc"></div>
+                        <div class="tpz">
+                            <a href="../响应式/index.html">
+                            </a>
+                            <h4>苹果官网</h4>
+                            <h6>第一次布局响应式</h6>
+                        </div>
+                    </div>
+                    <div class="zpa">
+                        <img src="img/38cac073019176cf" alt="">
+                        <div class="yc"></div>
+                        <div class="tpz">
+                            <a href="../企业、/index.html">
+                            </a>
+                            <h4>企业站</h4>
+                            <h6>第一次操作模拟的app</h6>
+                        </div>
+                </div>
+                    <div class="zpa">
+                        <img src="img/yi" alt="">
+                        <div class="yc"></div>
+                        <div class="tpz">
+                            <a href="../移动/index.html">
+                            </a>
+                            <h4>360移动商城</h4>
+                            <h6>响应式的初步页面</h6>
+                        </div>
+                </div>
+                    <div class="zpa">
+                        <img src="img/pingguo.jpg" alt="">
+                        <div class="yc"></div>
+                        <div class="tpz">
+                            <a href="file:///C:/Users/lenovo/Desktop/%E5%93%8D%E5%BA%94%E5%BC%8F/index.html">
+                            </a>
+                            <h4>苹果官网</h4>
+                            <h6>第一次布局响应式</h6>
+                        </div>
+                </div>
+                </div>
+            </div>
+</div>
     <div class="section">
-4
+        <div class="can1">
+            <div class="lxw">
+                <h2>联系我吧</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse in facilisis ex, vitae maximus diam. Maecenas nisl dui.
+                </p>
+            </div>
+            <div class="lxz">
+                <input type="text" placeholder="我的名字" class="name">
+                <input type="text" placeholder="联系方式" class="name">
+                <textarea name="" id="" cols="30" rows="10" class="name1">关于意见建议</textarea>
+                <input type="submit" class="name2" style="outline: none;">
+            </div>
+            <div class="lxy">
+                <ul>
+                    <li>
+                        <div class="lo">
+                            <img src="img/weizhi.png" alt="">
+                        </div>
+                        <div class="zi">
+                            <p>
+                                山西省太原市小店区平阳路学府街口开通大厦511
+                            </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="lo">
+                            <img src="img/dianhua.png" alt="">
+                        </div>
+                        <div class="zi">
+                            <p>
+                                联系方式：12345678911
+                            </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="lo">
+                            <img src="img/youxiang.png" alt="">
+                        </div>
+                        <div class="zi">
+                            <p>
+                                123456789ert@qq.com
+                            </p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
-    <div class="section">
-5
-    </div>
+</div>
 </div>
 </body>
 <script src="js/jquery-3.2.1.js"></script>
 <script src="js/jquery.easing.1.3.js"></script>
+<script src="js/bottom.js"></script>
 <script src="js/index.translt.js"></script>
 <script src="js/jquery.fullPage.min.js"></script>
 <script src="js/index.js"></script>
