--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a href="#p4">我学的</a>
             </li>
             <li data-menuanchor="p5">
-                <a href="#p5">关于我</a>
+                <a href="#p5">联系我</a>
             </li>
         </ul>
     </div>    <div class="banner">
@@ -168,7 +168,7 @@
                         <img src="img/xm.jpg" alt="">
                         <div class="yc"></div>
                         <div class="tpz">
-                            <a href="../小米/index.html">
+                            <a href="../小米/index.html" target="_blank">
                             </a>
                             <h4>小米官网</h4>
                             <h6>第一个使用html做出的页面</h6>
@@ -198,29 +198,27 @@
                         <img src="img/38cac073019176cf" alt="">
                         <div class="yc"></div>
                         <div class="tpz">
-                            <a href="../企业、/index.html">
-                            </a>
+                            <a href="../企业、/index.html"></a>
                             <h4>企业站</h4>
                             <h6>第一次操作模拟的app</h6>
                         </div>
                 </div>
                     <div class="zpa">
-                        <img src="img/yi" alt="">
+                        <img src="img/yidong.png" alt="">
                         <div class="yc"></div>
                         <div class="tpz">
-                            <a href="../移动/index.html">
-                            </a>
-                            <h4>360移动商城</h4>
+                            <a href="../移动/index.html"></a>
+                            <h4>中国移动</h4>
                             <h6>响应式的初步页面</h6>
                         </div>
                 </div>
                     <div class="zpa">
-                        <img src="img/pingguo.jpg" alt="">
+                        <img src="img/abc.jpg" alt="">
                         <div class="yc"></div>
                         <div class="tpz">
-                            <a href="file:///C:/Users/lenovo/Desktop/%E5%93%8D%E5%BA%94%E5%BC%8F/index.html">
+                            <a href="../todo/index.html">
                             </a>
-                            <h4>苹果官网</h4>
+                            <h4>待办事项</h4>
                             <h6>第一次布局响应式</h6>
                         </div>
                 </div>
